# VSource

./: CMakeLists.txt  Changelog.txt  README.md
example/: CMakeLists.txt  CustomVSource.cpp  CustomVSource.h  CustomVSourceVersion.h  CustomVSourceVersion.h.in
src/: CMakeLists.txt  VSource.cpp  VSource.h  VSourceVersion.h
test/: CMakeLists.txt  main.cpp
